backend/interpreter/com/interpreter/grammar/grammar.txt
wstatement      → exprStmt
               | printStmt
               | block ;

block          → "{" declaration* "}" ;

expression     →commay 
comma	       → equality ("," equality)*;
equality       → comparison ( ( "!=" | "==" ) comparison )* ;
comparison     → term ( ( ">" | ">=" | "<" | "<=" ) term )* ;
term           → factor ( ( "-" | "+" ) factor )* ;
factor         → unary ( ( "/" | "*" ) unary )* ;
unary          → ( "!" | "-" ) unary
               | primary ;
primary        → NUMBER | STRING | "true" | "false" | "nil"
               | "(" expression ")" ;
